Fix nav alignment

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,7 +1,3 @@
 .navbar {
 	background-color: #FFFFFF;
 }
-
-.navbar-menu {
-    height: 70px;
-}
